Fix footer overflowing into cards

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ body {
 
 .main {
   display: grid;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: 50px 1fr;
   margin: 20px;
 
   row-gap: 20px;
@@ -81,10 +81,10 @@ body {
 .book-container {
   display: grid;
 
-  align-items: center;
   justify-content: center;
 
   grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
+  grid-template-rows: repeat(auto-fit, 200px);
   gap: 20px;
 }
 
